# agent

./: .dockerignore  .gitignore  Dockerfile  README.md  TRACKER.MD  WORKFLOW.md  api.py  docker-compose.yml  entrypoint.sh  indexer.py  logger_config.py  main.py  pyproject.toml  repo_downloader.py  requirements.txt  resolver.py  vecstore.py
agent/: __init__.py  api.py  context_builder.py  indexer.py  logger_config.py  repo_downloader.py  resolver.py  vecstore.py  yandex_tracker.py
