[project]
name = "agent"
version = "0.1.0"
description = "LangChain-based project for resolving stack traces using vector embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "openai>=1.0.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.40",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
